--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 }
 
 .unko0 {
-    background-color: #000000;
+    background-color: #FFF;
     color: #F5DF4D;
     font-size: 20px;
     margin: 0;
