--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 
 .header {
     margin: 0;
-    padding: 0;
+    padding: 30px;
 }
 
 .unko0 {
@@ -13,5 +13,12 @@
     color: #F5DF4D;
     font-size: 20px;
     margin: 0;
-    padding: 0;
+    padding: 40px;
+}
+.footer {
+    background-color: #FFF;
+    color: #F5DF4D;
+    font-size: 12px;
+    margin: 0;
+    padding: 40px;
 }
