--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
-.body {
+body {
     font-family: sans-serif;
     background-color: #f2f2f2;
         
 }
 
-.header {
+header {
     margin: 0;
     padding: 30px;
 }
@@ -15,7 +15,7 @@
     margin: 0;
     padding: 40px;
 }
-.footer {
+footer {
     color: #F5DF4D;
     font-size: 12px;
     margin: 0;
