--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -23,6 +23,16 @@ a:hover {
   color: #fff;
   transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+img {
+  margin: 20px auto 0;
+  transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+img:hover {
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+  transform: translateY(-10px);
+  transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 
 blockquote {
   margin: 15px;
