--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -7,6 +7,11 @@
     max-width: 300px;
   }
 
+  video {
+    width: 100%;
+    max-width: 300px;
+  }
+
   /* Posts list */
   .list-pagination {
     margin: 10px 0 5px 0;
