--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -34,6 +34,19 @@ img:hover {
   transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+video {
+  width: 90%;
+  margin: 20px auto 0;
+  text-align: center;
+  transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+video:hover {
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+  transform: translateY(-10px);
+  transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
 blockquote {
   margin: 15px;
   padding-left: 15px;
@@ -75,15 +88,14 @@ p {
 
 table {
   width: 100%;
-}
-
-tbody tr:hover {
-  background-color: #f5f5f5;
+  background-color:  #eee;
+  margin-right:auto
 }
 
 td {
   padding: 8px;
   border-bottom: 1px solid #ddd;
+  text-align: left;
 }
 
 th {
