--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -23,6 +23,7 @@ a:hover {
   color: #fff;
   transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
 img {
   margin: 20px auto 0;
   transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -107,4 +108,11 @@ th {
 // markdown reset
 a.reversefootnote {
   display: none;
+}
+
+.cocoen {
+  img {
+    box-shadow: initial;
+    transform: initial;
+  }
 }
