--- a/_sass/post-list.scss
+++ b/_sass/post-list.scss
@@ -9,11 +9,58 @@
 }
 
 .posts-list-item-name {
-  width: calc(100% - 100px);
   font-weight: 300;
 }
 
 .list-pagination {
   margin: 20px 0 10px 0;
   text-align: center;
+}
+
+.posts-panel-item {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+}
+.panel-padding {
+  padding: 10px;
+}
+
+.panel-item {
+  width: 160px;
+  height: 160px;
+  div{
+    transform: scale(1.2);
+    opacity: 0;
+  }
+}
+
+.panel-item:hover {
+  div{
+    color: #FFF;
+    transform: scale(0.9);
+    opacity: 1;
+    transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+
+  img{
+    filter: brightness(30%);
+    transform: rotate(5deg);
+    transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+}
+
+.panel-item img {    
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.panel-item {
+  img {
+    box-shadow: initial;
+    transform: initial;
+    margin: initial;
+  }
 }
