--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   /* reset default styles */
   img {
     width: 100%;
@@ -29,14 +29,18 @@
     align-items: center;
   }
 
+
   .panel-item {
     width: 100%;
     height: 160px;
     position: relative;
+    border-radius: 10px;
+    background-color: #fff;
 
     img {
       width: 160px;
       height: 160px;
+      border-radius: 10px;
     }
 
     div {
@@ -46,12 +50,12 @@
 
     .posts-list-item-date {
       position: absolute;
-      bottom: 0; right: 0;
+      bottom: 0; right: 10px;
     }
     
     .posts-list-item-name {
       position: absolute;
-      top: 0; left: 180px;
+      top: 0; left: 170px;
     }
   }
 
@@ -72,7 +76,7 @@
 
   a:hover {
     background: #000;
-    color: #000;
+    color: #fff;
   }
 }
 
