--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -8,7 +8,7 @@
 
 html,
 body {
-  background: #fff;
+  background: #f5f5f5;
   color: #000;
   height: 100%;
 }
@@ -80,7 +80,7 @@ img {
 
 ol,
 ul {
-  margin-left: 35px;
+  margin: 10px;
 }
 
 p {
