indexに面白機能を付けた

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,7 @@
 <!-- https://github.com/koenoe/cocoen/tree/v2.0.5 -->
 <script src="/assets/scripts/cocoen.min.js" async></script>
 <script src="/assets/scripts/cocoen-jquery.min.js" async></script>
+<scrript src="/assets/scripts/color-changer.js" async></script>
 <script>
 window.onload = function(){
   $('.cocoen').cocoen();
